# AdoCpp

./: .gitignore  CMakeLists.txt  GetExprtk.cmake  GetImGui.cmake  GetPmp.cmake  GetRapidJSON.cmake  GetRapidjson.cmake  GetSFML.cmake  GetSelbaWard.cmake  README.md
AdoCpp/: CMakeLists.txt
AdoCpp/src/: AdoCpp.h
AdoCpp/src/AdoCpp/: Color.h  Color.inl  DynamicValue.cpp  DynamicValue.h  Easing.cpp  Easing.h  Event.cpp  Event.h  Level.cpp  Level.h  Tile.cpp  Tile.h  Utils.cpp  Utils.h
AdoCpp/src/AdoCpp/Events/: Base.cpp  Base.h  Dlc.cpp  Dlc.h  GamePlay.cpp  GamePlay.h  Modifiers.cpp  Modifiers.h  Track.cpp  Track.h  Visual.cpp  Visual.h
AdoCpp/src/AdoCpp/Math/: Angle.h  Angle.inl  Vector2.cpp  Vector2.h  Vector2.inl
AdoCppGame/: CMakeLists.txt
AdoCppGame/Levels/2021/: fixed.adofai
AdoCppGame/Levels/Multi_arm/: backup.adofai  main.adofai  sub1.adofai  sub2.adofai  sub3.adofai
AdoCppGame/Levels/SarouA Camellia_-_Parallel_Universe_Shifter 2024.2.4/: ! Special Thanks.txt  ForPlayer.adofai  NoEffect.adofai  backup.adofai  final_2part.adofai
AdoCppGame/Levels/ma/Multi_arm(fixed)/: sub1.adofai
AdoCppGame/Levels/招笑城镇[-2]/: backup.adofai  main.adofai
AdoCppGame/Levels/机关枪特效版/: backup.adofai  main.adofai
AdoCppGame/src/: AssetManager.cpp  AssetManager.h  AudioProcessing.h  Config.cpp  Config.h  Game.cpp  Game.h  HitErrorMeter.h  HitText.h  ImGuiConfig.h  ImGuiFileDialogConfig.h  KeyViewer.cpp  KeyViewer.h  State.h  Tile.cpp  Tile.h  main.cpp  resource.rc
AdoCppGame/src/State/: Charting.cpp  Charting.h  LiveCharting.cpp  LiveCharting.h  Playing.cpp  Playing.h  StateLiveCharting.cpp  StateLiveCharting.h
AdoCppMacro/: CMakeLists.txt
AdoCppMacro/src/: main.cpp
test/: CMakeLists.txt  test.cpp
